2000-12-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (article-treat-dumbquotes): Quote backslashes in
	doc-string.

	* lisp/dgnushack.el
	(byte-compile-file-form-custom-declare-variable): Use `defvar'
	instead of `custom-declare-variable' to make the variable
	uncustomizable if the arguments has the keyword `:version'.

2000-12-22  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* README.semi.ja: Fix typo.

2000-12-21  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `compose-mail' for Mule.

	* lisp/dgnushack.el (TopLevel): Byte-optimize
	`custom-declare-variable', `custom-declare-group, and
	`custom-declare-face' to omit unsupported keywords when Mule is
	running.

2000-12-20  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.0 revision 00.

	* lisp/dgnushack.el (TopLevel): Advise `custom-handle-keyword' not
	to signal an error when Mule is running.
	(TopLevel): Bind `:ascent', `:foreground', `:help', `:version' and
	`:set-after' if colon keyword is not available.
	(TopLevel): Require `custom'.

	* lisp/lpath.el (TopLevel): Fbind `shell-command-to-string' for
	Mule.
	(TopLevel): Don't require `custom' here.

2000-12-20  Jesper Harder <jesper_harder@hotmail.com>

	* make.bat: set max-lisp-eval-depth.

See ChangeLog.3 for earlier changes.